--- a/CudaAccelerated/CudaAccelerated.vcxproj
+++ b/CudaAccelerated/CudaAccelerated.vcxproj
@@ -58,14 +58,17 @@
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <SubSystem>Console</SubSystem>
       <AdditionalDependencies>cudart_static.lib;kernel32.lib;user32.lib;gdi32.lib;winspool.lib;comdlg32.lib;advapi32.lib;shell32.lib;ole32.lib;oleaut32.lib;uuid.lib;odbc32.lib;odbccp32.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalOptions>/NODEFAULTLIB:libcmt.lib</AdditionalOptions>
+      <IgnoreAllDefaultLibraries>false</IgnoreAllDefaultLibraries>
     </Link>
     <CudaCompile>
       <TargetMachinePlatform>64</TargetMachinePlatform>
-      <AdditionalOptions>-lcudadevrt %(AdditionalOptions)</AdditionalOptions>
+      <AdditionalOptions>-lcudadevrt -Wno-deprecated-gpu-targets %(AdditionalOptions)</AdditionalOptions>
       <GenerateRelocatableDeviceCode>true</GenerateRelocatableDeviceCode>
     </CudaCompile>
     <CudaLink>
       <AdditionalDependencies>"C:\Program Files\NVIDIA GPU Computing Toolkit\CUDA\v12.8\lib\x64\cudadevrt.lib";%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalOptions>-Wno-deprecated-gpu-targets %(AdditionalOptions)</AdditionalOptions>
     </CudaLink>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
@@ -99,6 +102,8 @@
     <ClInclude Include="include\Matrix\Matrix.hpp" />
     <ClInclude Include="include\MemoryManager\MemoryManager.hpp" />
     <ClInclude Include="include\Net\Net.hpp" />
+    <ClInclude Include="include\ThreadPool\ThreadPool.hpp" />
+    <ClInclude Include="include\Timer.hpp" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="include\AdvancedMemory\AdvancedMemory.cpp" />
@@ -106,6 +111,7 @@
     <ClCompile Include="include\Matrix\Matrix.cpp" />
     <ClCompile Include="include\MemoryManager\MemoryManager.cpp" />
     <ClCompile Include="include\Net\Net.cpp" />
+    <ClCompile Include="include\ThreadPool\ThreadPool.cpp" />
     <ClCompile Include="Main.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
