--- a/NeuroSoraEngine/NeuroSoraEngine.vcxproj
+++ b/NeuroSoraEngine/NeuroSoraEngine.vcxproj
@@ -12,8 +12,9 @@
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <ProjectGuid>{D4170265-C890-B0A4-FEF3-1E6FFCF560C6}</ProjectGuid>
-    <RootNamespace>CudaAccelerated</RootNamespace>
+    <RootNamespace>NeuroSoraEngine</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
+    <ProjectName>NeuroSoraEngine</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'" Label="Configuration">
